yamlfile/manifest/mariadb-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: mariadb 
  namespace: wordpress 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: mariadb 
  template: 
    metadata: 
      labels: 
        app: mariadb 
    spec: 
      containers: 
        - name: mariadb 
          image: mariadb:11.4 
          ports: 
            - containerPort: 3306 
          securityContext: 
            allowPrivilegeEscalation: false 
            privileged: false 
          resources: 
            requests: 
              cpu: "100m" 
              memory: "256Mi" 
            limits: 
              cpu: "500m" 
              memory: "512Mi" 
          volumeMounts: 
            - name: mariadb-data 
              mountPath: /var/lib/mysql 
      volumes: 
        - name: mariadb-data 
          persistentVolumeClaim: 
            claimName: mariadb-data
