yamlfile/manifest/mariadb-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: mariadb 
  namespace: wordpress 
spec: 
  type: ClusterIP 
  selector: 
    app: mariadb 
  ports: 
    - name: mysql 
      port: 3306 
      targetPort: 3306 
      protocol: TCP
