yamlfile/manifest/wordpress-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: wordpress 
  namespace: wordpress 
spec: 
  type: ClusterIP 
  selector: 
    app: wordpress 
  ports: 
    - name: http 
      port: 80 
      targetPort: 80 
      protocol: TCP
