yamlfile/manifest/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: wordpress 
  namespace: wordpress 
spec: 
  ingressClassName: public 
  tls: 
    - hosts: 
        - wordpress.local 
      secretName: wordpress-tls 
  rules: 
    - host: wordpress.local 
      http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: wordpress 
                port: 
                  number: 80
