yamlfile/manifest/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: postgres-allow-application 
  namespace: database 
spec: 
  podSelector: 
    matchLabels: 
      app: postgres 
  policyTypes: 
    - Ingress 
  ingress: 
    - from: 
        - namespaceSelector: 
            matchLabels: 
              kubernetes.io/metadata.name: application 
      ports: 
        - protocol: TCP 
          port: 5432
